# EasyAI

./: .env.example  .gitignore  README.md  check_db_structure.py  main.py  model_sync_config.json  model_sync_daemon.py  pyproject.toml  requirements.txt  setup.cfg  test_transaction.py
scripts/: install_service.sh  model_sync.service
sql/: add_soft_delete_fields.sql  knowledge_tables_code_matching.sql  knowledge_tables_migration.sql  models.sql
src/: __init__.py
src/api/: app.py  dependencies.py
src/api/controllers/: __init__.py  knowledge_controller.py  model_controller.py  provider_controller.py  user_controller.py
src/api/dtos/: __init__.py  user_dtos.py
src/application/: __init__.py
src/application/dto/: file_upload_dto.py  knowledge_base_dto.py  knowledge_dto.py  model_dto.py  provider_dto.py  workflow_dto.py
src/application/services/: __init__.py  embedding_app_service.py  embedding_application_service.py  knowledge_app_service.py  knowledge_application_service.py  model_app_service.py  model_application_service.py  provider_app_service.py  provider_application_service.py  user_application_service.py
src/domain/: __init__.py
src/domain/knowledge/entities/: __init__.py  document.py  document_chunk.py  knowledge_base.py
src/domain/knowledge/repositories/: __init__.py  document_chunk_repository.py  document_repository.py  embedding_repository.py  knowledge_base_repository.py
src/domain/knowledge/services/: __init__.py  document_parser_service.py  embedding_domain_service.py  file_upload_service.py  knowledge_base_domain_service.py
src/domain/knowledge/services/chunking/: __init__.py  base_chunker.py  chunker_factory.py  document_chunking_service.py  general_chunker.py
src/domain/knowledge/vo/: __init__.py  chunking_config.py  embedding_config.py  search_query.py  workflow_config.py
src/domain/model/services/: __init__.py  registry.py
src/domain/model/services/config/: __init__.py  base.py  models.py  registry.py
src/domain/model/services/embedding/: __init__.py  base.py  (+2 more)
src/domain/provider/: __init__.py  exceptions.py
src/domain/provider/entities/: __init__.py  model.py  provider.py
src/domain/provider/repositories/: __init__.py  model_repository.py  provider_repository.py
src/domain/provider/services/: provider_domain_service.py
src/domain/provider/value_objects/: __init__.py  api_key.py  base_url.py
src/domain/user/entities/: user.py
src/domain/user/repositories/: __init__.py  user_repository.py
src/domain/user/services/: __init__.py  user_domain_service.py
src/domain/user/value_objects/: __init__.py  email.py  password.py  user_status.py  username.py
src/infrastructure/: __init__.py  database.py
src/infrastructure/parsers/: document_parsers.py
src/infrastructure/repositories/: document_chunk_repository_impl.py  document_chunk_sql_repository.py  document_repository_impl.py  document_sql_repository.py  knowledge_base_database_repository_impl.py  knowledge_base_repository_impl.py  sql_user_repository.py  user_repository_impl.py
src/infrastructure/repositories/knowledge/: __init__.py  document_chunk_repository_impl.py  document_chunk_sql_repository.py  document_repository_impl.py  document_sql_repository.py  embedding_config_repository_impl.py  embedding_repository_impl.py  embedding_vector_repository.py  knowledge_base_database_repository_impl.py  knowledge_base_repository_impl.py
src/infrastructure/repositories/model/: model_repository_impl.py  sql_model_repository.py
src/infrastructure/repositories/provider/: __init__.py  provider_repository_impl.py  sql_provider_repository.py
src/infrastructure/security/: __init__.py  encryption.py
src/infrastructure/services/: __init__.py  jwt_service.py  model_config_parser.py  model_config_service.py  model_sync_scheduler.py  model_sync_service.py  password_service.py
src/infrastructure/utils/: __init__.py  uuid_generator.py
src/test/: test_model_factory.py
ui/: package-lock.json  package.json
ui/public/: test-icons.html
ui/src/: App.tsx
ui/src/components/: AuthGuard.tsx  Header.tsx  KnowledgeWorkflowWizard.tsx  Layout.tsx  ModelList.tsx  ProviderCard.tsx  ProviderList.tsx  ProviderModal.tsx  Sidebar.tsx  Toast.tsx
ui/src/components/knowledge/: ConfigurationStep.tsx  FileUploadStep.tsx  KnowledgeBaseDetail.tsx  KnowledgeWorkflowWizard.tsx  ProcessingStep.tsx  index.ts
ui/src/hooks/: useKnowledgeWorkflow.ts  useNavigation.ts  useToast.ts
ui/src/pages/: Dashboard.tsx  Knowledge.tsx  Login.tsx  ModelKnowledgeBase.tsx  Register.tsx
ui/src/services/: authService.ts  knowledgeService.ts  providerService.ts
ui/src/stores/: authStore.ts
ui/src/utils/: routes.ts
(+12 files in other folders)
